styles.css
@font-face {
    font-family: robotoslab-variablefont_wght-webfont;
    src: url("./font/robotoslab-variablefont_wght-webfont.woff2") format(woff2);
    

}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/*Mobile layout*/

body {
    height: 100vh;
    font-family: "robotoslab-variablefont_wght-webfont", sans-serif;
}

html, body {
    overflow-x: hidden;
}
img {
    max-width: 100%;
}

.pug-img {
    margin-top: 2rem;
      -webkit-box-shadow: 0px 8px 7px 2px rgba(0,0,0,0.43); 
    box-shadow: 0px 8px 7px 2px rgba(0,0,0,0.43);
}


#background-des {
    position: absolute;
    left: 50%;
    top: 2%;
    height: 24rem;
    width: min(23rem, 75vw);
    border-bottom-right-radius: 25rem;
    border-top-right-radius: 2rem;
    border-top-left-radius: 1rem;
    border-bottom-left-radius: 2rem;
    background-color: rgb(25, 219, 28);
    z-index: -1;
     -webkit-box-shadow: 0px 8px 7px 2px rgba(10, 222, 27, 0.43); 
    box-shadow: 0px 8px 7px 2px rgba(9, 242, 9, 0.43);
}

main {
    display: grid;
    margin-top: 1rem;
    grid-template-columns: repeat(1, 300px);
    gap: 2rem;
    align-items: center;
    justify-content: center;
    width: 100%;
}


#projects, #about {
  display: grid;
  grid-template-columns: repeat(1, 300px);
  gap: 2rem;
  text-align: center;
  
}

.about-me {
    width: 300px;
    height: 20rem;
     padding: 2rem;
     margin-bottom: 6rem;
}

h2 {
    margin-top: 2rem;
}

h3 {
    font-size: 1.3rem;
}

.title {
    margin-right: 1rem;
}

article, p {
    padding-left: 5px;
    padding-right: 5px;
    font-size: 1.1rem;
}



#link-image img {
    margin-top: 1rem;
    margin-left: 5px;
    margin-right: 5px;
}

.project {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 300px;
    height: 24rem;
    gap: 0.5rem;
    padding: 0.5rem;
    -webkit-box-shadow: 0px 8px 7px 2px rgba(0,0,0,0.43); 
    box-shadow: 0px 8px 7px 2px rgba(0,0,0,0.43);
}

.project-image {
    display: flex;
    margin-top: 1rem;
    width: 250px;
    height: 200px;
    object-fit: cover;
    border-radius: 5px;
}

.project-social-link {
    display: flex;
    flex-direction: row;
    align-self: flex-end;
    margin-right: 1rem;
    gap: 0.5rem;
    padding-left: 2px;
    padding-right: 2px;
    margin-top: 0.5rem;
}


#contact {
     display: grid;
  grid-template-columns: repeat(1, 300px);
    gap: 2rem;
    width: 300px;
    height: 20rem;
    margin-bottom: 1rem;
    -webkit-box-shadow: 0px 8px 7px 2px rgba(0,0,0,0.43); 
    box-shadow: 0px 8px 7px 2px rgba(0,0,0,0.43);
}

.contact-me {
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 10px;
    margin-left: 1rem;
}

/*Tablet Layout*/

@media (min-width: 768px) {

    main {
    display: grid;
    grid-template-columns: repeat(2, 300px);
    gap: 2rem;
    align-items: start;
    justify-content: center;
    width: 100%;
}

#hero {
    grid-column: 1 / -1;
    display: flex;
    justify-content: center;
    gap: 2rem;
    margin-top: 2rem;

}


#background-des {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    width: 45rem;
    height: 30rem;
    margin-top: 2rem;
}

.about-me {
    padding: 0.8rem;
}


#projects {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(2, 300px);
  gap: 2rem;
  justify-content: center;
  text-align: center;
  margin-bottom: 2rem;
  margin-top: 2rem;
  
}
#work-cont{
   grid-column: 1 / -1;
    text-align: center;
}

#contact {
    grid-column: 1/ -1;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;

}

.contact-me {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
}
}


/*Desktop layout*/

@media (min-width: 1024px) {

    #portait img {
    width: 300px;
}

#hero {
    grid-column: 1 / -1;
    display: flex;
    justify-content: center;
    gap: 2rem;
    margin-top: 2rem;

}

#background-des {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    width: 45rem;
    height: 30rem;
    margin-top: 2rem;
}
.about-me {
    padding: 0.8rem;
}

main {
    display: grid;
    grid-template-columns: repeat(3, 300px);
    gap: 2rem;
    align-items: start;
    justify-content: center;
    width: 100%;
}

#projects {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: repeat(3, 300px);
  gap: 2rem;
  justify-content: center;
  text-align: center;
  margin-top: 2rem;
  margin-bottom: 2rem;
  
}

#work-cont{
   grid-column: 1 / -1;
    text-align: center;
}

#contact {
    grid-column: 1/ -1;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin-bottom: 3rem;

}

.contact-me {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
}

/*hover*/

#battleship, #todo, #tictactoe,
#restaurant, #weather, #calculator {
    display: flex;
    margin-top: 1rem;
    width: 250px;
    height: 200px;
    object-fit: cover;
    border-radius: 5px;
    transition: transform 250ms;

}

#battleship:hover, #todo:hover, #tictactoe:hover,
#restaurant:hover, #weather:hover, #calculator:hover {
    transform: translateY(-10px);
    transform: scale(1.2);

}


}

/*keyFrames*/

@keyframes grow-shrink {
    25%,
    75% {
        scale: 100%;
    }
}

.about-me {
    animation-duration: 3s;
    animation-name: slide-in;
}

@keyframes slide-in {
    from {
        translate: 150vw 0;
        scale: 200% 1;
    }
    to {
        translate: 0 0;
        scale: 100% 1;
    }
}

